tests/parsing/smtlib/v2.6/errors/054_declare-const_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/054_declare-const_unclosed_1.smt2", line 2, character 23-24:
2 | (declare-const foo bar _)
                           ^
Error while parsing a constant declaration, read the reserved word '_',
      but expected a closing parenthesis.
